# mobile_repair_frontend

./: pyproject.toml
src/mobile_repair_frontend/: app.py
src/mobile_repair_frontend/api/: client.py
src/mobile_repair_frontend/components/: sidebar.py
src/mobile_repair_frontend/pages/: 1_Login.py  2_Services.py  3_Reservations.py  4_Admin.py
src/mobile_repair_frontend/pages/utils/: auth.py
